# jj

./: CHANGELOG.md  Cargo.toml
.github/workflows/: binaries.yml  ci.yml  docs.yml  release.yml  scorecards.yml
cli/src/: config-schema.json  config.rs
cli/src/commands/: arrange.rs
cli/tests/: test_global_opts.rs
demos/: demo_git_compat.sh  demo_helpers.sh  demo_juggle_conflicts.sh  demo_operation_log.sh  demo_resolve_conflict.sh  demo_working_copy.sh
docs/: config.md
lib/: Cargo.toml
lib/src/: backend.rs  config_resolver.rs  git_backend.rs  hg_backend.rs  index.rs  lib.rs  local_backend.rs  repo.rs  settings.rs  store.rs  workspace.rs
src/: commands.rs
testing/: Cargo.toml
tests/: test_checkout.rs
web/docs/src/content/docs/: config.md
