cargo-features = []

[workspace]
resolver = "3"
members = ["cli", "lib", "lib/gen-protos", "lib/proc-macros", "lib/testutils"]

[workspace.package]
version = "0.38.0"
license = "Apache-2.0"
rust-version = "1.89" # NOTE: remember to update CI, mise.toml, contributing.md, changelog.md, and install-and-setup.md
edition = "2024"
readme = "README.md"
homepage = "https://www.jj-vcs.dev/"
repository = "https://github.com/jj-vcs/jj"
documentation = "https://docs.jj-vcs.dev/"
categories = ["version-control", "development-tools"]
keywords = ["VCS", "DVCS", "SCM", "Git", "Mercurial"]

[workspace.dependencies]
ansi-to-tui = "8.0.1"
assert_cmd = "2.1.2"
assert_matches = "1.5.0"
async-trait = "0.1.89"
blake2 = "0.10.6"
bstr = "1.12.1"
chrono = { version = "0.4.44", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
clap = { version = "4.5.60", features = [
    "derive",
    "deprecated",
    "wrap_help",
    "string",
] }
clap_complete = { version = "4.5.66", features = ["unstable-dynamic"] }
clap_complete_nushell = "4.5.10"
# Update clap-markdown manually since test_generate_md_cli_help snapshot
# will need regenerating.
clap-markdown = "=0.1.5"
clap_mangen = "0.2.25"
clru = "0.6.3"
criterion = "0.8.2"
crossterm = { version = "0.29", default-features = false, features = ["windows"] }
datatest-stable = "0.3.3"
digest = "0.10.7"
dunce = "1.0.5"
either = "1.15.0"
erased-serde = "0.4.9"
etcetera = "0.11.0"
futures = "0.3.32"
gix = { version = "0.80.0", default-features = false, features = [
    "attributes",
    "blob-diff",
    "index",
    "max-performance-safe",
    "zlib-rs",
] }
globset = "0.4.18"
hashbrown = { version = "0.16.1", default-features = false, features = ["inline-more"] }
ignore = "0.4.25"
indexmap = { version = "2.13.0", features = ["serde"] }
indoc = "2.0.7"
insta = { version = "1.46.3", features = ["filters"] }
interim = { version = "0.2.1", features = ["chrono_0_4"] }
itertools = "0.14.0"
jsonschema = { version = "0.44.0", default-features = false }
libc = { version = "0.2.180" }
maplit = "1.0.2"
nix = "0.31.2"
num_cpus = "1.17.0"
once_cell = "1.21.3"
pest = "2.8.6"
pest_derive = "2.8.6"
pollster = "0.4.0"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.104"
proptest = "1.10.0"
proptest-derive = "0.8.0"
proptest-state-machine = "0.7.0"
prost = "0.14.3"
prost-build = "0.14.3"
quote = "1.0.42"
rand = "0.10.0"
rand_chacha = "0.10.0"
ratatui = { version = "0.30.0", features = ["crossterm"] }
rayon = "1.10.0"
ref-cast = "1.0.25"
regex = "1.12.3"
rpassword = "7.4.0"
rustix = { version = "1.1.4", features = ["fs"] }
same-file = "1.0.6"
sapling-renderdag = "0.1.0"
sapling-streampager = "0.12.0"
scm-record = "0.10.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.149"
shlex = "1.3.0"
slab = "0.4.12"
smallvec = { version = "1.15.1", features = [
    "const_generics",
    "const_new",
    "serde",
    "union",
] }
strsim = "0.11.1"
syn = "2.0.111"
rustversion = "1.0.22"
tempfile = "3.26.0"
test-case = "3.3.1"
textwrap = "0.16.2"
thiserror = "2.0.17"
timeago = { version = "0.6.0", default-features = false }
tokio = { version = "1.49.0", features = ["io-util"] }
toml = "0.9.11"
toml_edit = { version = "0.24.0", features = ["serde"] }
tracing = "0.1.44"
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "std",
    "ansi",
    "env-filter",
    "fmt",
] }
unicode-width = "0.2.2"
watchman_client = "0.9.0"
whoami = "2.1.1"
winreg = "0.55"

# put all inter-workspace libraries, i.e. those that use 'path = ...' here in
# their own (alphabetically sorted) block

jj-lib = { path = "lib", version = "0.38.0", default-features = false }
jj-lib-proc-macros = { path = "lib/proc-macros", version = "0.38.0" }
testutils = { path = "lib/testutils" }

[workspace.lints.clippy]
borrow_as_ptr = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
elidable_lifetime_names = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
format_collect = "warn"
format_push_string = "warn"
implicit_clone = "warn"
manual_let_else = "warn"
needless_for_each = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
ref_option = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
stable_sort_primitive = "warn"
uninlined_format_args = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"
unnested_or_patterns = "warn"
unused_trait_names = "warn"
use_self = "warn"
useless_conversion = "warn"
while_let_loop = "warn"

[workspace.lints.rust]
let_underscore_drop = "warn"
redundant_imports = "warn"

[profile.dev]
# Opt-level 0 tends to run out of stack on Windows when running async code
opt-level = 1

[profile.dev.package]
# Insta suggests compiling these packages in opt mode for faster testing.
# See https://docs.rs/insta/latest/insta/#optional-faster-runs.
insta.opt-level = 3
similar.opt-level = 3
# Proptest suggests compiling itself and its RNG in opt mode as well.
# See https://proptest-rs.github.io/proptest/proptest/tips-and-best-practices.html#setting-opt-level
proptest.opt-level = 3
proptest-state-machine.opt-level = 3
rand_chacha.opt-level = 3

[profile.release]
strip = "debuginfo"
codegen-units = 1
