[package]
name = "jujutsu-testing"
version = "0.4.0"
authors = ["Martin von Zweigbergk <martinvonz@google.com>"]
edition = "2021"
rust-version = "1.57"
license = "Apache-2.0"
description = "Testing library for Jujutsu (an experimental VCS)"
homepage = "https://github.com/martinvonz/jj"
repository = "https://github.com/martinvonz/jj"
documentation = "https://docs.rs/jujutsu"
readme = "../README.md"

[[bin]]
name = "fake-editor"
path = "src/fake-editor.rs"

[[bin]]
name = "fake-diff-editor"
path = "src/fake-diff-editor.rs"

[dependencies]
clap = { version = "3.1.10", features = ["derive"] }
itertools = "0.10.3"
